2003-07-31  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c:  Fix incorrect bracketing of switch statement entries
	introduced way back in Dec 2000. This fixes the "x11 clipboard" bug.

2003-07-27  Ethan Merritt <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/titlepag.tex: This is a first pass at updating
	the "What is New" section to reflect changes since version 3.7. I also
	slightly re-arranged the sections on mousing, and added my name to the
	list of contributers.

2003-07-27  Ethan Merritt <merritt@u.washington.edu>

	* src/command.c src/mouse.c docs/gnuplot.doc: Report key modifiers
	active at the time of a mouse click in variables MOUSE_SHIFT,
	MOUSE_ALT, and MOUSE_CTRL.

2003-07-23  Ethan Merritt <merritt@u.washington.edu>

	* configure.in: Rename the configuration option for Jaime Reed's
	'defined(var)' code, and enable it by default.  The option is now
	./configure --disable-defined-var

	* show.c: Move listing of undefined variables to an FPRINTF.

2003-07-22  Ethan Merritt <merritt@u.washington.edu>

	* src/command.c src/command.h src/mouse.c:
	Add a new user command 'pause mouse {"text"}'.  On mouse-capable
	terminals the pause will terminate on either a mouse click or on
	a <cr>; for all other terminals it is treated as 'pause -1'.

	* src/parse.c src/parse.h: Add a new function get_udv(key) that can
	search for user-defined variables even if the key is not a token in
	the current command line.

	* src/mouse.c src/command.c: When mousing is active, each mouse click 
	in the current plot window will update the current value of user-defined
	variables MOUSE_BUTTON MOUSE_X MOUSE_Y MOUSE_X2 MOUSE_Y2. In combination
	with Jaime Reed's patch below, this allows gnuplot scripts to test for
	the presence and result of mouse input.

	* src/gplt_x11.c term/x11.trm: Continue processing mouse activity for
	all displayed X11 windows.  This is necessarily done in gnuplot_x11,
	since gnuplot discards the old scaling information each time it starts